2009-10-09  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12119: PHP warning shown in EM, if webserver can't remove extension dir (thanks to Steffen Gebert)

2009-10-09  Oliver Hader  <oliver@typo3.org>

	* Follow-up to issue #12162: Reverted modification of existing locallang labels and introduced new labels instead

2009-10-09  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #12154: Improve API of flashmessages

2009-10-09  Francois Suter  <francois@typo3.org>

	* Fixed bug #12078: Scheduler: Check if additional fields indeed provide fields
	* Fixed bug #12117: Added use of flash messages to the Extension Manager (thanks to Steffen Gebert)
	* Fixed bug #12166: Scheduler: Gathered TODOs from Forge bug tracker into the Scheduler's manual

2009-10-09  Kasper Skaarhoj  <kasper@typo3.org>
	* Tiny bug with date function in t3lib_befunc. Casted timestamp to integer.
	* Added User TSconfig option "options.checkPageLanguageOverlay" so flexforms only show language fields for languages available on the page.
	* Fixed problem with notification emails to users when a workspace review rejection happens. Now it works
	* Added possibility to reset the diff-information for localizations so translators or admins can click a button that will mark a record so it appears to be in need of translation again.
	* Fixed problem with "Save and view" for new pages: Simply removed the button for new pages because it didn't choose the right PID anyway.
	* Implemented an override of allowed language per workspace. This is an expert feature available as a USER TSconfig option "options.workspaces.allowed_languages"
	* Expanded the feature that disables/enables login in a branch so now you can allow a login but force the usergroups to be "0,-2" (basically, that no usergroups are set for the user). This can help to reduce multiple caching of similar pages in case of many usergroup combinations in a system.
	* Implemented a simple hook after retrieval of a page from cache.