@@ -174,6 +174,9 @@ True non-internal extensions are characterized by the fact that they could be wr
 			<label index="emconf_modify_tables.alttitle">Existing tables modified</label>
 			<label index="emconf_modify_tables.description">List of tablenames which are only modified - not fully created - by this extension.</label>
 			<label index="emconf_modify_tables.details">Tables from this list found in the ext_tables.sql file of the extension</label>
+			<label index="emconf_doNotLoadInFE.alttitle">Load in frontend</label>
+			<label index="emconf_doNotLoadInFE.description">"Yes" (default) will load the extension in the frontend and the backend. "No": the extension is loaded only in the backend.</label>
+			<label index="emconf_doNotLoadInFE.details">Some extensions are only required in the backend. With this flag set, this extension is not loaded in the frontend context, thus speeding up the site.</label>
 			<label index="emconf_private.alttitle">Private</label>
 			<label index="emconf_private.description">If set, this version is not shown in the public list in the online repository.</label>
 			<label index="emconf_private.details">&quot;Private&quot; uploads requires you to manually enter a special key (which will be shown to you after an upload has been completed) to be able to import and view details for the uploaded extension.
